<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:layout_margin="4dp"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings"
        app:titleTextAppearance="@style/titleStyle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingStart="@dimen/text_indent"
        android:paddingEnd="6dp"
        android:paddingVertical="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/dark_theme"
        android:textAppearance="@style/settingsText"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingStart="@dimen/text_indent"
        android:paddingEnd="12dp"
        android:paddingVertical="21dp"
        android:text="@string/share_app"
        android:textAppearance="@style/settingsText"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingStart="@dimen/text_indent"
        android:paddingEnd="12dp"
        android:paddingVertical="21dp"
        android:text="@string/text_support"
        android:textAppearance="@style/settingsText" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:paddingStart="@dimen/text_indent"
        android:paddingEnd="12dp"
        android:paddingVertical="21dp"
        android:text="@string/user_agreement"
        android:textAppearance="@style/settingsText" />

</LinearLayout>